improved job and fixed observer

--- a/resources/config.properties
+++ b/resources/config.properties
@@ -1,2 +1,2 @@
-#bookdb.class=pluginprojectlibraryeclipsercp.repositories.BookDAOImplementation1
-bookdb.class=pluginprojectlibraryeclipsercp.repositories.BookDBImplementation2
+bookdb.class=pluginprojectlibraryeclipsercpp.repositories.BookDAOImplementationXML
+#bookdb.class=pluginprojectlibraryeclipsercpp.repositories.BookDBImplementationList
